04-Ingress-Path-Base-Routing/apache-deploy-svc.yml
##DEPLOYMENT YAML FOR NGINX SERVER##
apiVersion: apps/v1
kind: Deployment

metadata: #Deploy metadata
  name: ingress-apache-deploy
  namespace: ingress
  labels:
    env: dev

spec: #Deploy spec
  replicas: 2
  selector:
    matchLabels:
      app: apachenginx #Should be same as labels under pod template

  #Pod Template
  template:
    metadata: #Pod metadate
      # name: ingress-apache-Pod   #not needed k8s ignores this in deploy.yml replica.yml pods names are generated automatically 
      labels:
        app: apachenginx


    spec:  #Pod spec
      containers:
      - name: ingress-apache-cont
        image: httpd:2.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---

##SERVICE YAML FOR NGINX SERVER##

apiVersion: v1
kind: Service

metadata: #Service metadata
  name: ingress-apache-service
  namespace: ingress
  labels:
    env: dev

spec: #Service spec
  selector:
    app: apachenginx  #Should be same as the labels under pod template in deploy.yml
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
  type: ClusterIP
